after bit of clean up

--- a/nbs/01_LLMForwardPass.ipynb
+++ b/nbs/01_LLMForwardPass.ipynb
@@ -67,7 +67,7 @@
        "{'input_ids': [504, 2644, 314, 216], 'attention_mask': [1, 1, 1, 1]}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
        "['The', ' cat', ' is', ' ']"
       ]
      },
-     "execution_count": null,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
        "       grad_fn=<UnsafeViewBackward0>)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
        "torch.Size([1, 4, 49152])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
        "[' very', ' a', ' standing', ' also']"
       ]
      },
-     "execution_count": null,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
        "'The cat is 100%'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,6 +457,8 @@
     "Congratulations! You've just built and understood the core engine that powers every large language model. What seemed like magic is actually a surprisingly elegant process:\n",
     "\n",
     "**The Complete Picture:**\n",
+    "\n",
+    "\n",
     "1. **Text becomes numbers** - Tokenization converts human language into mathematical representations\n",
     "2. **Pattern recognition at scale** - The model evaluates 49,152 possibilities for every single prediction\n",
     "3. **Controlled randomness** - Temperature and top-k sampling prevent boring, repetitive outputs\n",
@@ -470,9 +472,19 @@
     "\n",
     "Understanding this gives you insight into why LLMs sometimes hallucinate (they're optimizing for plausible patterns, not truth), why they can be creative (controlled randomness), and why context matters so much (each prediction builds on everything before it).\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcea9c48",
+   "metadata": {},
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
