--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a repo for blog."
+    "Lets 🎓 deeplearning. This is my repo. "
    ]
   },
   {
