after few indetation fix

--- a/nbs/03_DAFTSFT.ipynb
+++ b/nbs/03_DAFTSFT.ipynb
@@ -17,7 +17,7 @@
     "1. base model : trained on raw text for next token prediction(classic language modeling). Which is done by all language model by training on all the crawed web data.\n",
     "1. instruct model : Train the base model on the further curated data where real magic happens. Like follwing instruction, multilayer chat, to make it helpful, safe, and aligned with user expectations etc . This process is known as RLHF.\n",
     "\n",
-    "Below is the well-known RLHF pipeline, taken from [this excellent blog](https://huyenchip.com/2023/05/02/rlhf.html)\n",
+    "Below is a basic pipeline for RLHF, taken from [this excellent blog by Chip Huyen](https://huyenchip.com/2023/05/02/rlhf.html)\n",
     "\n",
     "<img title=\"a title\" alt=\"Alt text\" src=\"./static/blog3/RLHF.png\" width=400>"
    ]
@@ -41,7 +41,8 @@
     "1. **Compute**: Due to hardware constraints, we trained on a very small sample to validate pipeline, not to reach SOTA results.\n",
     "1. **Goal**:\n",
     "    - Validate that DoRA + LoRA SFT works end-to-end.\n",
-    "    - Measure how much domain knowledge the model can absorb with few steps."
+    "    - Measure how much domain knowledge the model can absorb with few steps.\n",
+    "1. **Code**: All the code for the experiment is present in the [qa_sys](https://github.com/tripathysagar/qa_sys.git). Follow the notebook only no propritary data is shared."
    ]
   },
   {
@@ -78,64 +79,66 @@
     "1. **Prompt** :\n",
     "    Below is the exact prompt I used to generate Q&A pairs using SDK:\n",
     "    ```yml\n",
-    "    qa_generation: | \n",
-    "    You are a synthetic data generator for API and business process documentation. The input is a document describing one or more processes, APIs, or business requirements.\n",
+    "      qa_generation: | \n",
+    "      You are a synthetic data generator for API and business process documentation. The input is a document describing one or more processes, APIs, or business requirements.\n",
     "\n",
-    "    **Instructions:**\n",
-    "    1. Automatically identify the **document title** from the content.  \n",
-    "       - Use the inferred title **naturally** in every question and answer.  \n",
-    "       - If no clear title exists, you may use the filename without extension as the title.  \n",
-    "    2. Generate question-and-answer pairs for the following roles:  \n",
-    "       - **Business Analyst (BA):** focus on requirements, stakeholder value, business rules, process optimization, compliance, risk, and ROI.  \n",
-    "       - **System Analyst / Software Analyst (SA):** focus on system interactions, workflow, dependencies, data flows, and integration points.  \n",
-    "       - **Developer (DEV):** focus on inputs, outputs, API parameters, request/response examples, error handling, and implementation considerations.  \n",
-    "       - **QA / Tester (QA):** focus on test cases, edge cases, validation, error scenarios, and business rule verification.\n",
-    "    3. Each question and answer must **refer to the inferred title** naturally. Example:\n",
-    "       - Question: \"For the `User Management process`, what are the steps and required inputs?\"\n",
-    "       - Answer: \"The `User Management process` requires two APIs: `GET token` for authentication and `PUT ManageUser` for updating user details.\"\n",
-    "    4. Only generate Q&A from the provided content; do not invent information.\n",
-    "    5. If the document contains only links or very little meaningful content, output an empty array `[]`.\n",
-    "    6. Ensure questions and answers are clear, self-contained, and unambiguous.\n",
-    "    7. Avoid duplicate questions.\n",
-    "    8. Generate at least **one Q&A per role** if information allows.\n",
-    "    9. Each question and answer must integrate the inferred title naturally.\n",
-    "    10. Do not infer or invent details not present in the document. If unclear, omit the Q&A for that role.\n",
-    "    11. If the document is processed in chunks, ensure Q&A is relevant only to the current chunk.\n",
-    "    12. Extract all high qualities Q&A pairs possible, up to the 5 per role.\n",
-    "    13. Think hard before generation\n",
+    "      **Instructions:**\n",
+    "      1. Automatically identify the **document title** from the content.  \n",
+    "        - Use the inferred title **naturally** in every question and answer.  \n",
+    "        - If no clear title exists, you may use the filename without extension as the title.  \n",
+    "      2. Generate question-and-answer pairs for the following roles:  \n",
+    "        - **Business Analyst (BA):** focus on requirements, stakeholder value, business rules, process optimization, compliance, risk, and ROI.  \n",
+    "        - **System Analyst / Software Analyst (SA):** focus on system interactions, workflow, dependencies, data flows, and integration points.  \n",
+    "        - **Developer (DEV):** focus on inputs, outputs, API parameters, request/response examples, error handling, and implementation considerations.  \n",
+    "        - **QA / Tester (QA):** focus on test cases, edge cases, validation, error scenarios, and business rule verification.\n",
+    "      3. Each question and answer must **refer to the inferred title** naturally. Example:\n",
+    "        - Question: \"For the `User Management process`, what are the steps and required inputs?\"\n",
+    "        - Answer: \"The `User Management process` requires two APIs: `GET token` for authentication and `PUT ManageUser` for updating user details.\"\n",
+    "      4. Only generate Q&A from the provided content; do not invent information.\n",
+    "      5. If the document contains only links or very little meaningful content, output an empty array `[]`.\n",
+    "      6. Ensure questions and answers are clear, self-contained, and unambiguous.\n",
+    "      7. Avoid duplicate questions.\n",
+    "      8. Generate at least **one Q&A per role** if information allows.\n",
+    "      9. Each question and answer must integrate the inferred title naturally.\n",
+    "      10. Do not infer or invent details not present in the document. If unclear, omit the Q&A for that role.\n",
+    "      11. If the document is processed in chunks, ensure Q&A is relevant only to the current chunk.\n",
+    "      12. Extract all high qualities Q&A pairs possible, up to the 5 per role.\n",
+    "      13. Think hard before generation\n",
     "\n",
-    "    **Output format:**\n",
-    "    [\n",
-    "      {{\n",
-    "        \"title\": \"inferred_document_title\",\n",
-    "        \"role\": \"BA\",\n",
-    "        \"question\": \"...\",\n",
-    "        \"answer\": \"...\"\n",
-    "      }},\n",
-    "      {{\n",
-    "        \"title\": \"inferred_document_title\",\n",
-    "        \"role\": \"SA\",\n",
-    "        \"question\": \"...\",\n",
-    "        \"answer\": \"...\"\n",
-    "      }},\n",
-    "      {{\n",
-    "        \"title\": \"inferred_document_title\",\n",
-    "        \"role\": \"DEV\",\n",
-    "        \"question\": \"...\",\n",
-    "        \"answer\": \"...\"\n",
-    "      }},\n",
-    "      {{\n",
-    "        \"title\": \"inferred_document_title\",\n",
-    "        \"role\": \"QA\",\n",
-    "        \"question\": \"...\",\n",
-    "        \"answer\": \"...\"\n",
-    "      }}\n",
-    "    ]\n",
+    "        **Output format:**\n",
+    "          [\n",
+    "            {{\n",
+    "              \"title\": \"inferred_document_title\",\n",
+    "              \"role\": \"BA\",\n",
+    "              \"question\": \"...\",\n",
+    "              \"answer\": \"...\"\n",
+    "            }},\n",
+    "            {{\n",
+    "              \"title\": \"inferred_document_title\",\n",
+    "              \"role\": \"SA\",\n",
+    "              \"question\": \"...\",\n",
+    "              \"answer\": \"...\"\n",
+    "            }},\n",
+    "            {{\n",
+    "              \"title\": \"inferred_document_title\",\n",
+    "              \"role\": \"DEV\",\n",
+    "              \"question\": \"...\",\n",
+    "              \"answer\": \"...\"\n",
+    "            }},\n",
+    "            {{\n",
+    "              \"title\": \"inferred_document_title\",\n",
+    "              \"role\": \"QA\",\n",
+    "              \"question\": \"...\",\n",
+    "              \"answer\": \"...\"\n",
+    "            }}\n",
+    "          ]\n",
+    "          Text:\n",
+    "          {text}\n",
+    "        \n",
     "\n",
-    "    Text:\n",
-    "    {text}\n",
     "\n",
-    "    ```"
+    "\n",
+    "  1. **Execution time**: The complete generation took around couple of days."
    ]
   },
   {
@@ -297,7 +300,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "In this experiment, I built a complete pipeline: scraping domain data from Confluence, generating synthetic Q&A data, and performing continual pretraining followed by SFT. The model showed decent results but still hallucinates and sometimes produces irrelevant text — a clear signal that further refinement is needed. \n",
+    "In this experiment, I built a complete pipeline: scraping domain data from Confluence, generating synthetic Q&A data, and performing continual pretraining followed by SFT. The model showed decent results but still hallucinates and sometimes produces irrelevant text — a clear signal that further refinement is needed. No efficent packing and speed up is not able to achived as training on Mac is painfully slow wrt Nvidia gpu.\n",
     "\n",
     "**Key takeaways and next steps**:\n",
     "\n",
@@ -307,6 +310,11 @@
     "1. **Tune LoRA configs and hyperparameters**: Having differenet configs for LoRA ranks and other hyper params in base model wihich will lead to storong adaption of source raw text.\n",
     "1. **Building scheduler for SFT**: The SFT triner fails dramtically when running with a decent lower lr i.e. 5e-5. To faster convergenece we have to use higher learning rate so that the model will not be stuck around local minima or saddle point."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
