after few indetation fix

--- a/nbs/03_DAFTSFT.ipynb
+++ b/nbs/03_DAFTSFT.ipynb
@@ -37,12 +37,12 @@
    "source": [
     "## Experiment Setup & Constraints\n",
     "1. **Hardware**: Mac M1 (no NVIDIA GPU, so training is on CPU/MPS backend — slower than CUDA).\n",
-    "1. **Data**: Small subset of internal wiki pages (only public-safe subset, for experimentation).\n",
+    "1. **Data**: Small subset of internal wiki pages. It belongs to telecom domain written in english, so no need to extend the vocabulary of the tokenizer of the model.\n",
     "1. **Compute**: Due to hardware constraints, we trained on a very small sample to validate pipeline, not to reach SOTA results.\n",
     "1. **Goal**:\n",
     "    - Validate that DoRA + LoRA SFT works end-to-end.\n",
     "    - Measure how much domain knowledge the model can absorb with few steps.\n",
-    "1. **Code**: All the code for the experiment is present in the [qa_sys](https://github.com/tripathysagar/qa_sys.git). Follow the notebook only no propritary data is shared."
+    "1. **Code**: All the code for the experiment is present in the [qa_sys](https://github.com/tripathysagar/qa_sys.git). Follow the notebook only no propritary data is shared.\n"
    ]
   },
   {
@@ -308,7 +308,8 @@
     "1. **Use multiple LLMs for generation**: Include multiple LLM for synthetic data generation which will give raises to more entropy of information\n",
     "1. **Experiment with larger base models**: Using bigger model for having grater knowledge absorption\n",
     "1. **Tune LoRA configs and hyperparameters**: Having differenet configs for LoRA ranks and other hyper params in base model wihich will lead to storong adaption of source raw text.\n",
-    "1. **Building scheduler for SFT**: The SFT triner fails dramtically when running with a decent lower lr i.e. 5e-5. To faster convergenece we have to use higher learning rate so that the model will not be stuck around local minima or saddle point."
+    "1. **Building scheduler for SFT**: The SFT triner fails dramtically when running with a decent lower lr i.e. 5e-5. To faster convergenece we have to use higher learning rate so that the model will not be stuck around local minima or saddle point.\n",
+    "1. **Eval** : a concrete pipeline for evalution of the trained model."
    ]
   },
   {
