--- a/nbs/01_LLMForwardPass.ipynb
+++ b/nbs/01_LLMForwardPass.ipynb
@@ -5,7 +5,20 @@
    "id": "7b2f44b7",
    "metadata": {},
    "source": [
-    "# The Magic Behind the Curtain: How LLMs Actually Generate Text\n",
+    "# The Magic Behind the Curtain: How LLMs Actually Generate Text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c85385d",
+   "metadata": {},
+   "source": [
+    "<p align=\"right\">\n",
+    "  <a href=\"https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/01_LLMForwardPass.ipynb\" target=\"_blank\">\n",
+    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "  </a>\n",
+    "</p>\n",
+    "\n",
     "\n",
     "Ever wondered what happens when you type \"The cat is\" and an AI completes it with something like \"sitting on the windowsill\"? You're about to peek behind the curtain and see exactly how Large Language Models think, predict, and generate text - one token at a time.\n",
     "\n",
@@ -67,7 +80,7 @@
        "{'input_ids': [504, 2644, 314, 216], 'attention_mask': [1, 1, 1, 1]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +112,7 @@
        "['The', ' cat', ' is', ' ']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +211,7 @@
        "       grad_fn=<UnsafeViewBackward0>)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +232,7 @@
        "torch.Size([1, 4, 49152])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +381,7 @@
        "[' very', ' a', ' standing', ' also']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +451,7 @@
        "'The cat is 100%'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
