--- a/nbs/02_LoRAPytorch.ipynb
+++ b/nbs/02_LoRAPytorch.ipynb
@@ -5,7 +5,20 @@
    "id": "bd599379",
    "metadata": {},
    "source": [
-    "# LoRA Explained: Fine-Tune Large Models with 90% Fewer Parameters\n",
+    "# LoRA Explained: Fine-Tune Large Models with 90% Fewer Parameters\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63c598b0",
+   "metadata": {},
+   "source": [
+    "<p align=\"right\">\n",
+    "  <a href=\"https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/02_LoRAPytorch.ipynb\" target=\"_blank\">\n",
+    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "  </a>\n",
+    "</p>\n",
+    "\n",
     "\n",
     "*A hands-on guide to Parameter-Efficient Fine-Tuning using Low-Rank Adaptation*\n",
     "\n",
