after bit of formatting fixup

--- a/nbs/01_LLMForwardPass.ipynb
+++ b/nbs/01_LLMForwardPass.ipynb
@@ -13,11 +13,14 @@
    "id": "4c85385d",
    "metadata": {},
    "source": [
-    "<p align=\"right\">\n",
-    "  <a href=\"https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/01_LLMForwardPass.ipynb\" target=\"_blank\">\n",
-    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-    "  </a>\n",
-    "</p>\n",
+    "<div style=\"display: flex; justify-content: space-between; align-items: center;\">\n",
+    "  <span>📅 31/08/2025</span>\n",
+    "  <p align=\"right\">\n",
+    "    <a href=\"https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/01_LLMForwardPass.ipynb\" target=\"_blank\">\n",
+    "        <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "    </a>\n",
+    "   </p>\n",
+    "</div>\n",
     "\n",
     "\n",
     "Ever wondered what happens when you type \"The cat is\" and an AI completes it with something like \"sitting on the windowsill\"? You're about to peek behind the curtain and see exactly how Large Language Models think, predict, and generate text - one token at a time.\n",
@@ -493,11 +496,7 @@
    "source": []
   }
  ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
 }
