--- a/nbs/02_LoRAPytorch.ipynb
+++ b/nbs/02_LoRAPytorch.ipynb
@@ -13,11 +13,14 @@
    "id": "63c598b0",
    "metadata": {},
    "source": [
+    "<div style=\"display: flex; justify-content: space-between; align-items: center;\">\n",
+    "  <span>📅 31/08/2025</span>\n",
     "<p align=\"right\">\n",
     "  <a href=\"https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/02_LoRAPytorch.ipynb\" target=\"_blank\">\n",
     "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "  </a>\n",
     "</p>\n",
+    "</div>\n",
     "\n",
     "\n",
     "*A hands-on guide to Parameter-Efficient Fine-Tuning using Low-Rank Adaptation*\n",
