--- a/nbs/03_DAFTSFT.ipynb
+++ b/nbs/03_DAFTSFT.ipynb
@@ -11,6 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"display: flex; justify-content: space-between; align-items: center;\">\n",
+    "  <span>📅 23/09/2025</span>\n",
+    "</div>\n",
+    "\n",
     "**Aim** of the experiment is to implement train a small LLM on new domain and prime it for that domain specific sythetic data.\n",
     "\n",
     "LLM training haapens in two steps:\n",
