--- a/nbs/04_PythonWalkThrough.ipynb
+++ b/nbs/04_PythonWalkThrough.ipynb
@@ -13,12 +13,14 @@
    "id": "24f982a1",
    "metadata": {},
    "source": [
-    "<p align=\"right\">\n",
-    "  <a href=\"https://colab.research.google.com/github/username/repo/blob/main/nbs/04_PythonWalkThrough.ipynb\" target=\"_blank\">\n",
-    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-    "  </a>\n",
-    "</p>\n",
-    "\n",
+    "<div style=\"display: flex; justify-content: space-between; align-items: center;\">\n",
+    "  <span>📅 02/10/2025</span>\n",
+    "    <p align=\"right\">\n",
+    "    <a href=\"https://colab.research.google.com/github/username/repo/blob/main/nbs/04_PythonWalkThrough.ipynb\" target=\"_blank\">\n",
+    "        <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "    </a>\n",
+    "    </p>\n",
+    "</div>\n",
     "\n",
     "\n",
     "If you're an experienced programmer looking to add Python to your toolkit, this guide is for you(writen for my wife who is a JS dev🤫😅). We're skipping the \"what is a variable\" explanations and focusing on what makes Python different and powerful. \n",
@@ -56,7 +58,7 @@
        "(int, float, str, bool, NoneType)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +355,7 @@
        "{'a': 1, 'b': 2}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +524,7 @@
        "'does not exists'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +586,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +608,7 @@
        "([0, 2, 4, 6, 8], [1, 3, 5, 7, 9])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +631,7 @@
        "{'A': 0, 'B': 1, 'C': 2, 'D': 3, 'E': 4}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +852,7 @@
        "'10 [-100, 1, 2, 3, 4]'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,11 +940,7 @@
    "source": []
   }
  ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
 }
