--- a/nbs/04_PythonWalkThrough.ipynb
+++ b/nbs/04_PythonWalkThrough.ipynb
@@ -58,7 +58,7 @@
        "(int, float, str, bool, NoneType)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
        "{'a': 1, 'b': 2}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
        "'does not exists'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": null,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
        "([0, 2, 4, 6, 8], [1, 3, 5, 7, 9])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
        "{'A': 0, 'B': 1, 'C': 2, 'D': 3, 'E': 4}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,6 +746,8 @@
     "- Creating new objects creates a new instance of the class\n",
     "- Each function have should have a reference to itself usally repesented by `self`\n",
     "- Helper functions wrapped in `__` that need to be followed for special functionality below are few and respective usages\n",
+    "\n",
+    "\n",
     "    | name | functionality |\n",
     "    |-----| -----|\n",
     "    |`__init__`| Constructor called when creating a new instance, initializes attributes |\n",
@@ -760,6 +762,8 @@
     "    |`__new__`| Creates and returns a new instance before `__init__` is called|\n",
     "    |`__enter__`| Called when entering a context manager (`with` statement)|\n",
     "    |`__exit__`|Called when exiting a context manager, handles cleanup|\n",
+    "\n",
+    "    \n",
     "    \n",
     "    Complete docs are present in [docs](https://docs.python.org/3/reference/datamodel.html#special-method-names)\n",
     "- Classes also suppourt inheritace, a base example can be found [here](https://docs.python.org/3/tutorial/classes.html#inheritance)"
@@ -852,7 +856,7 @@
        "'10 [-100, 1, 2, 3, 4]'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +944,11 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
