after a note and title change

--- a/nbs/05_GPTDecoder.ipynb
+++ b/nbs/05_GPTDecoder.ipynb
@@ -5,7 +5,7 @@
    "id": "803ad81d-100d-4f9a-b8e6-1f051c0af877",
    "metadata": {},
    "source": [
-    "# Building a GPT-2 Style Transformer: Character-Level Shakespeare Generation\n"
+    "# Building a Nano-GPT from Scratch: Character-Level Shakespeare Generation"
    ]
   },
   {
@@ -38,7 +38,15 @@
    "source": [
     "**Aim**: This blog documents the implementation of a Transformer architecture, focusing on the pretraining process that is critical and foundational to all LLMs. We use Shakespeare's text as our dataset, keeping the setup lightweight enough to run on a single GPU in Google Colab's free tier.\n",
     "\n",
-    "**Transformers**: These are the neural network architecture powering modern language models. Originally introduced in the paper *\"Attention is All You Need\"* (Vaswani et al., 2017), transformers have become the foundation for models like GPT, BERT, and beyond."
+    "**Transformers**: These are the neural network architecture powering modern language models. Originally introduced in the paper *\"Attention is All You Need\"* (Vaswani et al., 2017), transformers have become the foundation for models like GPT, BERT, and beyond.\n",
+    "\n",
+    "\n",
+    "**Note on Scope:** This blog focuses exclusively on the **pre-training** phase of language models—teaching a transformer to predict the next character in a sequence. It does not covers the additional steps that make models like ChatGPT conversational and helpful, such as:\n",
+    "\n",
+    "- Supervised Fine-Tuning (SFT) - teaching the model to follow instructions\n",
+    "- Reinforcement Learning from Human Feedback (RLHF) - aligning the model with human preferences\n",
+    "\n",
+    "Think of this as \"GPT\" without the \"Chat\"—we're building the foundational language understanding, which is the critical first step that all modern LLMs go through."
    ]
   },
   {
