--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -27,7 +27,7 @@
     "| 31/08/2025 | [LLM Text Generation](./01_LLMForwardPass.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/01_LLMForwardPass.ipynb) |\n",
     "| 31/08/2025 | [LoRA PyTorch](./02_LoRAPytorch.ipynb)| [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/02_LoRAPytorch.ipynb) |\n",
     "| 02/10/2025 | [Python Walk Through](./04_PythonWalkThrough.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/04_PythonWalkThrough.ipynb) |\n",
-    "| 15/10/2025 | [Building a GPT-2 Style Transformer](./05_GPTDecoder.ipynb)| [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/NanoTransformer/blob/main/nbs/01_GPTText2Text.ipynb) |\n",
+    "| 15/10/2025 | [Building a Nano-GPT from Scratch](./05_GPTDecoder.ipynb)| [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/NanoTransformer/blob/main/nbs/01_GPTText2Text.ipynb) |\n",
     "\n"
    ]
   },
