after blog 6 multi modal

--- a/nbs/05_GPTDecoder.ipynb
+++ b/nbs/05_GPTDecoder.ipynb
@@ -5,7 +5,7 @@
    "id": "803ad81d-100d-4f9a-b8e6-1f051c0af877",
    "metadata": {},
    "source": [
-    "# Building a Nano-GPT from Scratch: Character-Level Shakespeare Generation"
+    "# Building a Text Only Nano-GPT from Scratch: Character-Level Shakespeare Generation"
    ]
   },
   {
@@ -172,7 +172,7 @@
     "**Independent variable (Input/Context)**: The sequence of characters seen so far\n",
     "**Dependent variable (Target/Output)**: The next character to predict\n",
     "\n",
-    "So you get 4 training examples from \"Hello\":\n",
+    "Lets consider examples from \"Hello\" which generates 4 training sample :\n",
     "\n",
     "1. Input: \"H\" → Target: \"e\"\n",
     "2. Input: \"He\" → Target: \"l\"  \n",
