--- a/nbs/01_LLMForwardPass.ipynb
+++ b/nbs/01_LLMForwardPass.ipynb
@@ -1,11 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "7b2f44b7",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# The Magic Behind the Curtain: How LLMs Actually Generate Text"
+    "---\n",
+    "output-file: llmforwardpass.html\n",
+    "title: 'The Magic Behind the Curtain: How LLMs Actually Generate Text'\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -278,7 +282,7 @@
     "print(f\"[{op.logits.shape[0]}, {op.logits.shape[1]}, {op.logits.shape[2]}]\")\n",
     "print(f\"- Batch: {op.logits.shape[0]} text(s) processed\")\n",
     "print(f\"- Sequence: {op.logits.shape[1]} tokens in input\") \n",
-    "print(f\"- Vocab: {op.logits.shape[2]:,} possible next tokens\")\n"
+    "print(f\"- Vocab: {op.logits.shape[2]:,} possible next tokens\")"
    ]
   },
   {
