--- a/nbs/02_LoRAPytorch.ipynb
+++ b/nbs/02_LoRAPytorch.ipynb
@@ -1,11 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "bd599379",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# LoRA Explained: Fine-Tune Large Models with 90% Fewer Parameters\n"
+    "---\n",
+    "output-file: lorapytorch.html\n",
+    "title: 'LoRA Explained: Fine-Tune Large Models with 90% Fewer Parameters'\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -106,7 +110,7 @@
     "print(f\"Actual rank: {torch.linalg.matrix_rank(rank_2)}\")\n",
     "\n",
     "print(\"\\nZero matrix:\")\n",
-    "print(f\"Actual rank: {torch.linalg.matrix_rank(zero_matrix)}\")\n"
+    "print(f\"Actual rank: {torch.linalg.matrix_rank(zero_matrix)}\")"
    ]
   },
   {
@@ -182,7 +186,7 @@
     "print(f\"B shape: {B.shape}\")\n",
     "print(f\"W_decomposed shape: {W_decomposed.shape}\")\n",
     "print(f\"Parameters in original W: {W.numel()}\")\n",
-    "print(f\"Parameters in A + B: {A.numel() + B.numel()}\")\n"
+    "print(f\"Parameters in A + B: {A.numel() + B.numel()}\")"
    ]
   },
   {
@@ -416,7 +420,7 @@
     "\n",
     "                    \n",
     "            accuracy = 100. * correct / len(self.dls['valid'].dataset)\n",
-    "            print(f'Epoch {epoch+1}: Train Loss: {train_loss/len(self.dls[\"train\"]):.4f}, Valid Loss: {valid_loss/len(self.dls[\"valid\"]):.4f} Accuracy: {accuracy:.2f}%')\n"
+    "            print(f'Epoch {epoch+1}: Train Loss: {train_loss/len(self.dls[\"train\"]):.4f}, Valid Loss: {valid_loss/len(self.dls[\"valid\"]):.4f} Accuracy: {accuracy:.2f}%')"
    ]
   },
   {
@@ -980,7 +984,7 @@
     "# Load LoRA weights properly\n",
     "for name, param in lora_model.named_parameters():\n",
     "    if 'lora' in name and name in lora_data['weights']:\n",
-    "        param.data.copy_(lora_data['weights'][name])\n"
+    "        param.data.copy_(lora_data['weights'][name])"
    ]
   },
   {
@@ -1002,7 +1006,7 @@
    ],
    "source": [
     "# Test on 7&8 dataset\n",
-    "visualize_predictions(lora_model, dls2['valid'])\n"
+    "visualize_predictions(lora_model, dls2['valid'])"
    ]
   },
   {
@@ -1089,7 +1093,7 @@
     "\n",
     "for rank in ranks_to_test:\n",
     "    params, eff = test_rank(rank)\n",
-    "    results.append((rank, params, eff))\n"
+    "    results.append((rank, params, eff))"
    ]
   },
   {
