--- a/nbs/04_PythonWalkThrough.ipynb
+++ b/nbs/04_PythonWalkThrough.ipynb
@@ -1,11 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "036e7b84",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Python for Programmers: Fast Track to Productivity "
+    "---\n",
+    "output-file: pythonwalkthrough.html\n",
+    "title: 'Python for Programmers: Fast Track to Productivity'\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -116,7 +120,7 @@
     "elif age >= 13:\n",
     "    print(\"Teenager\")\n",
     "else:\n",
-    "    print(\"Child\")\n"
+    "    print(\"Child\")"
    ]
   },
   {
@@ -155,7 +159,7 @@
     "count = 0\n",
     "while count < 3:\n",
     "    print(f\"While: {count=}\")\n",
-    "    count += 1\n"
+    "    count += 1"
    ]
   },
   {
@@ -207,8 +211,7 @@
     "print(f\"{lis=}\")\n",
     "print(f\"lenght of the lis : {len(lis)}\")\n",
     "# indexing starting for 0\n",
-    "print(f\"{lis[0]=}\")\n",
-    "\n"
+    "print(f\"{lis[0]=}\")\n"
    ]
   },
   {
@@ -288,7 +291,7 @@
    "source": [
     "print(f\"{lis=}\")\n",
     "lis.insert(0, 99) # inserting value at the perticular index\n",
-    "print(f\"{lis=}\")\n"
+    "print(f\"{lis=}\")"
    ]
   },
   {
@@ -310,7 +313,7 @@
    "source": [
     "print(f\"{lis=}\")\n",
     "print(lis.pop()) # remove last element\n",
-    "print(f\"{lis=}\")\n"
+    "print(f\"{lis=}\")"
    ]
   },
   {
@@ -332,7 +335,7 @@
    "source": [
     "print(f\"{lis=}\")\n",
     "print(lis.remove(2)) # remove the 2nd element\n",
-    "print(f\"{lis=}\")\n"
+    "print(f\"{lis=}\")"
    ]
   },
   {
@@ -362,7 +365,7 @@
    ],
    "source": [
     "dic = dict({'a':1, 'b':2})\n",
-    "dic\n"
+    "dic"
    ]
   },
   {
@@ -383,7 +386,7 @@
    "source": [
     "dic = dict({'a':1, 'b':2}) # can be written as like {'a':1, 'b':2} without dict\n",
     "print(f\"{dic=}\")\n",
-    "print(f\"{dic['a']=}\")     # indexing the dictionary with a key value\n"
+    "print(f\"{dic['a']=}\")     # indexing the dictionary with a key value"
    ]
   },
   {
@@ -425,7 +428,7 @@
    "source": [
     "print(f\"{dic=}\")\n",
     "print(f\"{dic.pop('c')=}\")\n",
-    "print(f\"{dic=}\")\n"
+    "print(f\"{dic=}\")"
    ]
   },
   {
@@ -919,7 +922,7 @@
     "except Exception as e:\n",
     "    print(f\"An error occurred: {e}\")\n",
     "finally:\n",
-    "    print(\"This always runs, error or not\")\n"
+    "    print(\"This always runs, error or not\")"
    ]
   },
   {
