--- a/nbs/05_GPTDecoder.ipynb
+++ b/nbs/05_GPTDecoder.ipynb
@@ -1,11 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "803ad81d-100d-4f9a-b8e6-1f051c0af877",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Building a Text Only Nano-GPT from Scratch: Character-Level Shakespeare Generation"
+    "---\n",
+    "output-file: gptdecoder.html\n",
+    "title: 'Building a Text Only Nano-GPT from Scratch: Character-Level Shakespeare Generation'\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -433,7 +437,7 @@
     "plt.colorbar(im4, ax=axes[3], label='Probability')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
