--- a/nbs/06_MultiModal.ipynb
+++ b/nbs/06_MultiModal.ipynb
@@ -1,13 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "6b92d4e7-5bcb-4ab2-a534-d04cd97e16d2",
-   "metadata": {
-    "use_thinking": true
-   },
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
-    "# Building a Multi Modal Nano-GPT from Scratch: Shakespeare Meets Fashion MNIST"
+    "---\n",
+    "output-file: multimodal.html\n",
+    "title: 'Building a Multi Modal Nano-GPT from Scratch: Shakespeare Meets Fashion MNIST'\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -173,7 +175,7 @@
     "         loc='lower right', fontsize=8, ncol=1)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
