--- a/nbs/03_DAFTSFT.ipynb
+++ b/nbs/03_DAFTSFT.ipynb
@@ -1,10 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Domain Adaption Fine-Tuning with LoRA: My Experiment on Mac M1"
+    "---\n",
+    "output-file: daftsft.html\n",
+    "title: 'Domain Adaption Fine-Tuning with LoRA: My Experiment on Mac M1'\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
