after 7th blog ack

--- a/nbs/07_DistilationWeightInit.ipynb
+++ b/nbs/07_DistilationWeightInit.ipynb
@@ -3448,6 +3448,18 @@
     "\n",
     "The key insight: **specialized compression works** - by focusing on a narrow task (bash generation), we retained useful capabilities while dramatically reducing model size.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7b15cc8",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Acknowledgments\n",
+    "\n",
+    "1. This project was developed using [solve.it](https://solve.it/), which provided an excellent platform for experimentation, data preparation, model architecture design, and inference testing. Please check out the new way of literal programming.\n",
+    "1. The actual model training was conducted on Google Colab to leverage GPU resources."
+   ]
   }
  ],
  "metadata": {
