after 8th on agent

--- a/nbs/04_PythonWalkThrough.ipynb
+++ b/nbs/04_PythonWalkThrough.ipynb
@@ -211,7 +211,7 @@
     "print(f\"{lis=}\")\n",
     "print(f\"lenght of the lis : {len(lis)}\")\n",
     "# indexing starting for 0\n",
-    "print(f\"{lis[0]=}\")\n"
+    "print(f\"{lis[0]=}\")"
    ]
   },
   {
