--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -33,8 +33,7 @@
     "| 15/10/2025 | [Building a Text Only Nano-GPT from Scratch](./05_GPTDecoder.ipynb)| [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/NanoTransformer/blob/main/nbs/01_GPTText2Text.ipynb) |\n",
     "| 17/10/2025 | [Building a Multi Modal Nano-GPT from Scratch](./06_MultiModal.ipynb)|[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/NanoTransformer/blob/main/nbs/03_MultiModal.ipynb) |\n",
     "| 11/11/2025 | [Distilling Qwen2.5-Coder for Local Deployment](./07_DistilationWeightInit.ipynb)|[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/07_DistilationWeightInit.ipynb) |\n",
-    "\n",
-    "\n",
+    "| 15/11/2025 | [Agent From First Principle](./08_AgentFromFirstPrinciple.ipynb) |[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/08_AgentFromFirstPrinciple.ipynb) |\n",
     "\n"
    ]
   },
