after 9th agent

--- a/nbs/08_AgentFromFirstPrinciple.ipynb
+++ b/nbs/08_AgentFromFirstPrinciple.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "8efe57cb",
    "metadata": {},
    "source": [
     "---\n",
@@ -876,7 +875,7 @@
    "outputs": [],
    "source": [
     "assert safe_run(['find', '.', '-name', '*.ipynb']) != '', \"find should return output\"\n",
-    "assert type(safe_run(['ls', '-la'])) == str\n"
+    "assert type(safe_run(['ls', '-la'])) == str"
    ]
   },
   {
@@ -2045,7 +2044,7 @@
     "    # Multi-tool tests\n",
     "    \"Find all Python files in temp_dir and then search for 'def safe_run' in them\",\n",
     "    \"Look for all .py files in temp_dir and tell me which ones contain the word 'fastcore'\",\n",
-    "]\n"
+    "]"
    ]
   },
   {
