--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -34,6 +34,8 @@
     "| 17/10/2025 | [Building a Multi Modal Nano-GPT from Scratch](./06_MultiModal.ipynb)|[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/NanoTransformer/blob/main/nbs/03_MultiModal.ipynb) |\n",
     "| 11/11/2025 | [Distilling Qwen2.5-Coder for Local Deployment](./07_DistilationWeightInit.ipynb)|[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/07_DistilationWeightInit.ipynb) |\n",
     "| 15/11/2025 | [Agent From First Principle](./08_AgentFromFirstPrinciple.ipynb) |[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/08_AgentFromFirstPrinciple.ipynb) |\n",
+    "| 30/11/2025 | [Khazad Dum: Delving for Data with a Text2SQL Agent](./09_KhazadDum.ipynb) |[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/09_KhazadDum.ipynb) |\n",
+    "\n",
     "\n"
    ]
   },
